# space-invaders

./: .gitignore  CMakeLists.txt  README.md
include/: assetManager.h  audioManager.h  base.h  baseFragment.h  commons.h  enemy.h  enemyController.h  game.h  gameState.h  hud.h  menu.h  player.h  projectile.h
src/: assetManager.cpp  audioManager.cpp  base.cpp  baseFragment.cpp  commons.cpp  enemy.cpp  enemyController.cpp  game.cpp  hud.cpp  main.cpp  menu.cpp  player.cpp  projectile.cpp
src/header/: assetManager.h  enemy.h  enemyController.h  game.h  gameState.h  hud.h  menu.h  player.h  projectile.h
